manifests/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: gpt-oss-app
    app.kubernetes.io/managed-by: kustomize
  name: gpt-oss-route
  namespace: gpt-oss
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gpt-oss-svc
    weight: 100
  wildcardPolicy: None
